# bootcamp_python_aula_17

./: README.md  consultas.py  desafio.py  exemplo01.py  meubanco.db  pyproject.toml
